Fixed travis config.
- code coverage moved to after_success callback
- main build now runs only compile and test goals.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ scala:
 jdk:
   - openjdk7
   - oraclejdk7
-script: "sbt coveralls"
+script:
+  - sbt compile test
+after_success:
+  - sbt coveralls
