--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: scala
 scala:
   - 2.10.4
+  - 2.11.4  
 jdk:
   - openjdk7
   - oraclejdk7
+  - openjdk8
+  - oraclejdk8
 script:
   - sbt compile test
 after_success:
